Issue #472: add startFromFirst param
startFromFirst manage newDataIndex creation